<resources>
    <string name="app_name">Client MAL</string>

    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="myanimelist_account_username_hint">Connect to your myanimelist.net account !</string>
    <string name="username_hint">username</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="image_desc">cover of the media</string>
    <string name="user_name_not_found_message">User not found !</string>
    <string name="title_activity_navigation_drawer" translatable="false">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="logout">Logout</string>

    <string name="info_username">Username</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="days_spent">Days spent</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On-Hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="manga_stats">Manga Stats</string>
    <string name="reading">Reading</string>
    <string name="plan_to_read">Plan to Read</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login</string>
    <string name="incorrect_creds">Username or password incorrect</string>
    <string name="action_licenses">Open Source Licenses</string>
    <string name="action_about">About App</string>
    <string name="search">Search</string>
    <string name="go" translatable="false">Go</string>
    <string name="show_password">Show password</string>
    <string name="about">About</string>
    <string name="english_title">"English title"</string>
    <string name="synopsis">"Synopsis"</string>
    <string name="score">Score</string>
    <string name="info">Info</string>
    <string name="lists">Lists</string>
    <string name="search_results">Search Results</string>
    <string name="user_info">User info</string>
    <string name="user_list">User lists</string>
    <string name="to_search">Search</string>
    <string name="other">Other</string>

    <string-array name="score_array">
        <item>Select</item>
        <item>1 (Appalling)</item>
        <item>2 (Horrible)</item>
        <item>3 (Very Bad)</item>
        <item>4 (Bad)</item>
        <item>5 (Average)</item>
        <item>6 (Fine)</item>
        <item>7 (Good)</item>
        <item>8 (Very Good)</item>
        <item>9 (Great)</item>
        <item>10 (Masterpiece)</item>
    </string-array>

    <string-array name="anime_status_array">
        <item>Watching</item>
        <item>Completed</item>
        <item>On-Hold</item>
        <item>Dropped</item>
        <item>Plan to Watch</item>
    </string-array>

    <string-array name="manga_status_array">
        <item>Reading</item>
        <item>Completed</item>
        <item>On-Hold</item>
        <item>Dropped</item>
        <item>Plan to Read</item>
    </string-array>
</resources>
