<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.mooncat.clientmal.UserInfoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_username"
                android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/anime_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <TextView
                    android:text="@string/days_spent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_watching"/>

                <TextView
                    android:text="@string/completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_completed" />

                <TextView
                    android:text="@string/on_hold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_onhold" />

                <TextView
                    android:text="@string/dropped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_dropped" />

                <TextView
                    android:text="@string/plan_to_watch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_plantowatch" />

            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="160dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/info_anime_days"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_anime_watching_value"
                android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_completed_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_onhold_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_dropped_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_anime_plantowatch_value"
                    android:textAlignment="textEnd"/>

        </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/manga_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp">

                <TextView
                    android:text="@string/days_spent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_reading"/>

                <TextView
                    android:text="@string/completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_completed" />

                <TextView
                    android:text="@string/on_hold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_onhold" />

                <TextView
                    android:text="@string/dropped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_dropped" />

                <TextView
                    android:text="@string/plan_to_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_plantoread" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="160dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:id="@+id/info_manga_days"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_reading_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_completed_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_onhold_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_dropped_value"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_manga_plantoread_value"
                    android:textAlignment="textEnd"/>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

</FrameLayout>
